Update:  預設排序改由前端處理

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/CostRank/CostRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/CostRank/CostRank.cshtml
@@ -317,7 +317,7 @@
                 }, 300);
             });
 
-
+            OrderColumn("hotTable", 'TotalManagementFee', 'is-asc', true);
             // 手機版分頁筆數功能
             $('[data-sortingbox="true"]').on('change.sorting', function (e) {
                 // 呼叫 loading
