--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/VolumeRank/VolumeRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/VolumeRank/VolumeRank.cshtml
@@ -298,7 +298,7 @@
                 }, 300);
             });
 
-
+            OrderColumn("hotTable", 'LatestVolumeTradingVolume', 'is-desc', true);
             // 手機版分頁筆數功能
             $('[data-sortingbox="true"]').on('change.sorting', function (e) {
                 // 呼叫 loading
