--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewFund/NewFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewFund/NewFund.cshtml
@@ -181,7 +181,7 @@
             function loadData(page, pageSize, orderby, desc) {
                 var token = $('input[name="__RequestVerificationToken"]').val();
 
-				window.loading = () => 0;//蓋掉window.loading function
+                window.loading = () => 0;//蓋掉window.loading function
                 $.ajax({
                     url: '@ClientRoute.GenerateUrl(this, "NewFund", "GetSortedNewFund")',
                     type: 'POST',
@@ -208,14 +208,17 @@
                                     $(this).text(number);
                                 }
                             });
+                            if (orderby === undefined) {
+                                OrderColumn("newTable", 'SixMonthReturnMarketPriceOriginalCurrency', 'is-desc', true);
+                            }
                         } else {
                             console.error("Empty response received from the server.");
                         }
-					},
-					complete: function () {
-						$('.c-loading').loading('hide');
-						window.loading = (methodOrOptions) => $('.c-loading').loading(methodOrOptions);  // 重新定義 loading
-					},
+                    },
+                    complete: function () {
+                        $('.c-loading').loading('hide');
+                        window.loading = (methodOrOptions) => $('.c-loading').loading(methodOrOptions);  // 重新定義 loading
+                    },
                     error: function (xhr, status, error) {
                         console.error(error);
                     }
