Update: autocomplete預設顯示六個月績效最高五筆

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -2146,6 +2146,9 @@
                 data: { __RequestVerificationToken: token },
                 success: function (data, textStatus, jqXHR) {
                     initFilter(data);
+                    data.sort((a, b) => {
+                        return b.SixMonthReturnOriginalCurrency.Value - a.SixMonthReturnOriginalCurrency.Value;
+                    });
                     initAutocomplete(data);
                     QueryStringSearch();
 
