修改 ETF 搜尋、全產品搜尋頁 autocomplete 排序

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
@@ -593,6 +593,7 @@
                         console.log(data);
                         this.Result.List = data;
                         if (data) {
+                            this.Result.List.sort((a, b) => { return a.SixMonthReturnMarketPriceOriginalCurrency.Value - b.SixMonthReturnMarketPriceOriginalCurrency.Value })
                             var fjs = initFilterJS();
                             this.FJS = fjs;
                         }
