--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/QandAList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/QandAList.cshtml
@@ -7,6 +7,11 @@
     return;
 }
 
+@if (Model.Needbr)
+{
+    <br />   
+}
+
 <section class="c-section aos-init aos-animate" data-aos="fade-up" data-aos-once="true">
     <div class="l-wrap">
         <div class="c-section">
