--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SiteProductSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SiteProductSearchIndex.cshtml
@@ -850,7 +850,7 @@
                         };
 
                         if (data.FundProducts) {
-                            this.Result.List.Fund.sort((a, b) => { return a.SixMonthReturnOriginalCurrency.Value - b.SixMonthReturnOriginalCurrency.Value });
+                            this.Result.List.Fund.sort((a, b) => { return b.SixMonthReturnOriginalCurrency.Value - a.SixMonthReturnOriginalCurrency.Value });
                             this.FJS.Fund = initFundFilterJS();
                             this.InitializeTableSort('#uid-sortbox-fund', 'SixMonthReturnOriginalCurrency.Value', 'is-desc');
                         }
