--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/BondPrice.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/BondPrice.cshtml
@@ -571,7 +571,7 @@
                     window.loading('hide');
                 }, 300);
             });
-
+            OrderColumn("bondTable", 'UpsAndDownsMonth', 'is-desc', true);
             // 手機版分頁筆數功能
             $('[data-sortingbox="true"]').on('change.sorting', function (e) {
                 // 呼叫 loading
