高風險報告

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -1914,8 +1914,8 @@
 
         function QueryStringSearch() {
             var urlParams = new URLSearchParams(window.location.search);
-            var keyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('word')));
-            var hotkeyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('hotword')));
+            var keyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('kw')));
+            var hotkeyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('hotkw')));
             var hotproduct = DOMPurify.sanitize(decodeURIComponent(urlParams.get('hotproduct')));
 
             if (hotkeyword && hotkeyword != "null") {
