--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
@@ -97,8 +97,8 @@
 
             function checkKeywordQueryString() {
                 var urlParams = new URLSearchParams(window.location.search);
-                var keyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('word')));
-                var hotkeyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('hotword')));
+                var keyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('kw')));
+                var hotkeyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('hotkw')));
                 var hotproduct = DOMPurify.sanitize(decodeURIComponent(urlParams.get('hotproduct')));
 
                 function queryKeyword(key) {
