--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -184,7 +184,7 @@
             let self = $("input[insertKeywords]");
             let isSeachBar = self.attr("issearchbar");
             let urlParams = new URLSearchParams(window.location.search);
-            let keyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('word')));
+            let keyword = DOMPurify.sanitize(decodeURIComponent(urlParams.get('kw')));
             let params;
 
             if (isSeachBar == "true") {
